--- a/GitDev/GitDev/Resources/Localizable.strings
+++ b/GitDev/GitDev/Resources/Localizable.strings
@@ -11,6 +11,8 @@ user.list.title = "Devs";
 cancel = "Cancel";
 okay = "Okay";
 err.message = "Something Went Wrong";
+success.message = "Success";
+
 followers.title = "Followers: %d";
 following.title = "Following: %d";
 
@@ -21,3 +23,6 @@ blog.title = "Blog URL: %@";
 no.name = "Name not indicated";
 no.company = "Company not indicated";
 no.blog = "No blog URL";
+
+no.notes = "Enter Notes";
+save.title = "Notes saved!";
